syntax = "proto3";
option java_package = "mu.node.echo";
option java_multiple_files = true;
import "google/api/annotations.proto";

package echo;

service EchoService {
  rpc Send (SendMessageRequest) returns (Message) {
    option (google.api.http) = {
      post: "/api/v1/echo"
    };
  }

  rpc SendStream (SendMessageRequest) returns (stream Message) {
    option (google.api.http) = {
      post: "/api/v1/echoStream"
    };
  }

  rpc SendStreamStream (stream SendMessageRequest) returns (stream Message) {
    option (google.api.http) = {
      post: "/api/v1/echoStreamStream"
    };
  }
}

message SendMessageRequest {
  string content = 1;
}

message Message {
  string message_id = 1;
  string sender_id = 2;
  string content = 3;
}

